# racatoma

./: .gitignore  CMakeLists.txt  README.md  config.hpp.in  copyright-notice.txt
ctest/: linux.cmake
data/: sample.txt
el/: racatoma.el
src/: CMakeLists.txt  dummy.cpp  dummy.hpp  lambda.cpp  lambda.hpp  main.cpp  template.cpp  template.hpp
